# kitchen-box

./: Cargo.toml  README.md  test_upload_debug.sh
backend/: Cargo.toml
backend/migrations/: update_images_table.sql
backend/migrations/20260217120000_create_recipes/: down.sql  up.sql
backend/spec/: database.puml
backend/src/: auth.rs  db.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  categories.rs  images.rs  mod.rs  recipes.rs  users.rs
frontend/: Cargo.toml  index.html
frontend/src/: api.rs  main.rs  models.rs  theme.rs
frontend/src/components/: image_manager.rs  mod.rs  recipe_form.rs  recipe_list.rs  sidebar.rs  spinner.rs  theme_provider.rs
frontend/src/pages/: add.rs  edit.rs  home.rs  login.rs  mod.rs  register.rs  settings.rs  users.rs  view.rs
shared-types/: Cargo.toml
shared-types/src/: lib.rs
