[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.11", features = ["with-chrono-0_4"] }
rocket_cors = { version = "0.6.0", default-features = false }
postgres-types = { version = "0.2", features = ["with-serde_json-1"] }
shared-types = { path = "../shared-types" }
jsonwebtoken = "9.2"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }