[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "HtmlSelectElement", "HtmlElement", "Storage", "Window", "Document", "DomTokenList", "File", "FileReader", "HtmlImageElement"] }
gloo = { version = "0.6", features = ["futures"] }
gloo-net = { version = "0.3", features = ["http"] }
gloo-file = "0.2"
futures = "0.3"
gloo-timers = { version = "0.2", features = ["futures"] }
wasm-bindgen-futures = "0.4"  
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared-types = { path = "../shared-types" }